--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "keywords": [
     "formik"
   ],
+  "scripts": {
+    "build": "npx webpack-cli build"
+  },
   "author": "kazuhide maruyama",
   "license": "MIT",
   "devDependencies": {},
